fixed vertial align issues

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -59,7 +59,7 @@
 
 .search-bar{
    display: grid;
-   height: 50px;
+   height: 85%;
 
    padding: 12px 30px 0px 30px;
 
@@ -68,7 +68,7 @@
 
 .main{
    padding: 0%;
-   min-height: calc(100vh - 62px);
+   min-height: calc(100%);
 
    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
    background-color: #EEE3CB;
@@ -208,8 +208,10 @@
 }
 
 .middle-line{
-   height: calc(100vh - 6rem);
-   top: 15px;
-   position: relative;
-   border-left: 1px solid black;
+   height: calc(46rem);
+   vertical-align: center;
+   left: 50%;
+   position: absolute;
+   border-right: 1px solid black;
+   z-index: 9;
 } 
